--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  background-color: black;
 }
 
 .top {
@@ -10,12 +9,14 @@
   color: white;
   align-items: center;
   padding-left: 15%;
-
+  background-color: black;
+  font-family: helvetica;
 }
 
 .top h2 {
   padding-left: 20px;
   font-size: 20px;
+  font-family: helvetica;
 }
 
 .splash {
@@ -37,25 +38,41 @@
   height: 200px;
   width: 300px;
   color: white;
+  background-color: black;
+  font-family: helvetica;
 }
 
 .splash h1 {
   font-size: 30px;
   padding: 3px 0;
+  font-family: helvetica;
 }
 
 .splash h3 {
   font-size: 16px;
   padding-bottom: 20px;
+  font-family: helvetica;
 }
 
-nav {
+.red {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
   height: 80px;
   width: auto;
   background-color: red;
   color: white;
+  font-size: 25px;
+  font-family: helvetica;
+
   }
 
   span {
-      font-size: 25px;
+    padding: 0 25px;
+
+  }
+
+  .bottom {
+    background-color: black;
+
   }
